--- a/ProizvodkaWPF.csproj
+++ b/ProizvodkaWPF.csproj
@@ -65,6 +65,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Parser.cs" />
     <Compile Include="WatermarkService.cs" />
     <Compile Include="WatermarkAdorner.cs" />
     <Compile Include="MainWindow.xaml.cs">
