Settings and first doc

--- a/App.config
+++ b/App.config
@@ -16,6 +16,9 @@
             <setting name="Path" serializeAs="String">
                 <value>fsdfdsfsdf</value>
             </setting>
+            <setting name="save_path" serializeAs="String">
+                <value>Path.Combine(Environment.GetFolderPath(Environment.SpecialFolder.Desktop), "Документы дирекция КГЭУ")</value>
+            </setting>
         </ProizvodkaWPF.Properties.Settings>
     </userSettings>
 </configuration>
